# ReadingLevelSteering

./: .gitignore  CLAUDE.md  README.md  compile_model_stats.py  extract_complexity_vectors.py  generate_latex_table.py  main.py  model_regression_stats.csv  model_table.tex  plot_all_models.py  plot_initial_finding.py  plot_llama_3b_mystery.py  plot_llama_3b_mystery_zoomed.py  prepare_onestop_pairs.py  prepare_wikipedia_pairs.py  prompted_control_examples.txt  prompted_control_meta_analysis.py  pyproject.toml  quantify_steering.py  tediously_steer.py  universal_signature.py  visualize_tedium_activations.py
demonstrations/gemma-3-4b-it/: AdS-CFT_alpha-minus-3.md  AdS-CFT_alpha-plus-3.md
models/Phi-3-mini-4k-instruct/: extract_complexity_vectors.py  interactively_prompt.py  linear_regression_analysis.py  prompted_control.py  quantify_steering.py
models/gemma-3-4b-it/: interactively_prompt.py  prompted_control.py  quantify_steering.py  visualize_activation_matrices.py
models/gemma3-4b-it/: extract_complexity_vectors.py  linear_regression_analysis.py
models/granite-4.0-micro/: extract_complexity_vectors.py  extract_prompted_vector.py  interactively_prompt.py  linear_regression_analysis.py  prompted_control.py  quantify_steering.py  visualize_vector_geometry.py
models/llama-3.2-1b-instruct/: extract_complexity_vectors.py  interactively_prompt.py  prompted_control.py  quantify_steering.py
models/llama-3.2-3b-instruct/: extract_complexity_vectors.py  plot_piecewise_linear.py  (+5 more)
output/: magnitudes.json  metadata.json  steering_quantitative_results.csv  tedium_vectors.pt
(+69 files in other folders)
