[project]
name = "tediumvectortinker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "matplotlib>=3.10.7",
    "textstat>=0.7.10",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "zstandard>=0.25.0",
    "zstd>=1.5.7.2",
]
